pkg/grammar/grammar.peg.go
package grammar

// Code generated by peg -inline -switch -strict -output grammar.peg.go grammar.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleValid
	ruleResponse
	ruleCommand
	ruleMutation
	ruleQuery
	ruleFetchQuery
	ruleExistsQuery
	ruleStateBound
	ruleCreateOrFetch
	ruleCreateOrSet
	ruleObject
	ruleWorldObject
	ruleItemObject
	ruleRelObject
	ruleIdsList
	ruleDualIdentifier
	ruleIdentifier
	ruleItemParams
	ruleRelParams
	ruleItemParam
	ruleRelParam
	ruleItemKeys
	ruleRelKeys
	ruleItemKey
	ruleRelKey
	ruleError
	ruleStringLike
	ruleBoolean
	ruleText
	ruleQuotedText
	ruleItemsList
	ruleRelsList
	ruleNumber
	ruleItemType
	ruleItemExists
	ruleRelExists
	ruleItem
	ruleRel
	ruleFlag
	ruleStrictFlag
	ruleVerboseFlag
	ruleIdsFlag
	ruleKeyword
	ruleWORLD
	ruleITEM
	ruleITEM_EXISTS
	ruleREL
	ruleREL_EXISTS
	ruleFROM_QUERY
	ruleTO_QUERY
	ruleIN
	ruleIN_QUERY
	ruleCREATE
	ruleDELETE
	ruleSET
	ruleCLEAR
	ruleFETCH
	ruleLIST
	ruleEXISTS
	ruleFREE
	ruleNEST
	ruleTRUE
	ruleFALSE
	ruleEXTERNAL
	ruleNAME
	ruleTYPE
	ruleVERB
	ruleMECHANISM
	ruleASYNC
	ruleEXPANDED
	rulePERSON
	ruleDATABASE
	ruleQUEUE
	ruleBLOBSTORE
	ruleBROWSER
	ruleMOBILE
	ruleSERVER
	ruleDEVICE
	ruleCODE
	ruleQUOTE
	ruleEQUALS
	ruleFLAG
	ruleSTRICT
	ruleVERBOSE
	ruleIDS
	ruleERROR
	rule_
	ruleWhitespace
	ruleEOL
	ruleEND
)

var rul3s = [...]string{
	"Unknown",
	"Valid",
	"Response",
	"Command",
	"Mutation",
	"Query",
	"FetchQuery",
	"ExistsQuery",
	"StateBound",
	"CreateOrFetch",
	"CreateOrSet",
	"Object",
	"WorldObject",
	"ItemObject",
	"RelObject",
	"IdsList",
	"DualIdentifier",
	"Identifier",
	"ItemParams",
	"RelParams",
	"ItemParam",
	"RelParam",
	"ItemKeys",
	"RelKeys",
	"ItemKey",
	"RelKey",
	"Error",
	"StringLike",
	"Boolean",
	"Text",
	"QuotedText",
	"ItemsList",
	"RelsList",
	"Number",
	"ItemType",
	"ItemExists",
	"RelExists",
	"Item",
	"Rel",
	"Flag",
	"StrictFlag",
	"VerboseFlag",
	"IdsFlag",
	"Keyword",
	"WORLD",
	"ITEM",
	"ITEM_EXISTS",
	"REL",
	"REL_EXISTS",
	"FROM_QUERY",
	"TO_QUERY",
	"IN",
	"IN_QUERY",
	"CREATE",
	"DELETE",
	"SET",
	"CLEAR",
	"FETCH",
	"LIST",
	"EXISTS",
	"FREE",
	"NEST",
	"TRUE",
	"FALSE",
	"EXTERNAL",
	"NAME",
	"TYPE",
	"VERB",
	"MECHANISM",
	"ASYNC",
	"EXPANDED",
	"PERSON",
	"DATABASE",
	"QUEUE",
	"BLOBSTORE",
	"BROWSER",
	"MOBILE",
	"SERVER",
	"DEVICE",
	"CODE",
	"QUOTE",
	"EQUALS",
	"FLAG",
	"STRICT",
	"VERBOSE",
	"IDS",
	"ERROR",
	"_",
	"Whitespace",
	"EOL",
	"END",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type Parser struct {
	InputAttributes

	Buffer string
	buffer []rune
	rules  [91]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *Parser) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *Parser) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *Parser
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *Parser) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *Parser) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func (p *Parser) SprintSyntaxTree() string {
	var bldr strings.Builder
	p.WriteSyntaxTree(&bldr)
	return bldr.String()
}

func Pretty(pretty bool) func(*Parser) error {
	return func(p *Parser) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*Parser) error {
	return func(p *Parser) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *Parser) Init(options ...func(*Parser) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 Valid <- <(Response / Command)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				{
					position2, tokenIndex2 := position, tokenIndex
					{
						position4 := position
						{
							position5, tokenIndex5 := position, tokenIndex
							{
								position7 := position
								{
									position8, tokenIndex8 := position, tokenIndex
									{
										position10 := position
										if !_rules[ruleItem]() {
											goto l9
										}
										if !_rules[ruleIdentifier]() {
											goto l9
										}
										{
											position11, tokenIndex11 := position, tokenIndex
											if !_rules[ruleItemParams]() {
												goto l11
											}
											goto l12
										l11:
											position, tokenIndex = position11, tokenIndex11
										}
									l12:
										add(ruleItemObject, position10)
									}
									goto l8
								l9:
									position, tokenIndex = position8, tokenIndex8
									{
										switch buffer[position] {
										case 'i':
											{
												position14 := position
												if !_rules[ruleIDS]() {
													goto l5
												}
											l15:
												{
													position16, tokenIndex16 := position, tokenIndex
													if !_rules[ruleStringLike]() {
														goto l16
													}
													goto l15
												l16:
													position, tokenIndex = position16, tokenIndex16
												}
												if !_rules[rule_]() {
													goto l5
												}
												add(ruleIdsList, position14)
											}
										case 'r':
											{
												position17 := position
												if !_rules[ruleRel]() {
													goto l5
												}
												if !_rules[ruleDualIdentifier]() {
													goto l5
												}
												{
													position18, tokenIndex18 := position, tokenIndex
													if !_rules[ruleRelParams]() {
														goto l18
													}
													goto l19
												l18:
													position, tokenIndex = position18, tokenIndex18
												}
											l19:
												add(ruleRelObject, position17)
											}
										default:
											{
												position20 := position
												if !_rules[ruleWORLD]() {
													goto l5
												}
											l21:
												{
													position22, tokenIndex22 := position, tokenIndex
													if !matchDot() {
														goto l22
													}
													goto l21
												l22:
													position, tokenIndex = position22, tokenIndex22
												}
												if !_rules[rule_]() {
													goto l5
												}
												add(ruleWorldObject, position20)
											}
										}
									}

								}
							l8:
								add(ruleObject, position7)
							}
							goto l6
						l5:
							position, tokenIndex = position5, tokenIndex5
						}
					l6:
						if !_rules[rule_]() {
							goto l3
						}
						if !_rules[ruleEOL]() {
							goto l3
						}
						{
							position23, tokenIndex23 := position, tokenIndex
							{
								position25 := position
								{
									position26 := position
									if buffer[position] != rune('e') {
										goto l23
									}
									position++
									if buffer[position] != rune('r') {
										goto l23
									}
									position++
									if buffer[position] != rune('r') {
										goto l23
									}
									position++
									if buffer[position] != rune('o') {
										goto l23
									}
									position++
									if buffer[position] != rune('r') {
										goto l23
									}
									position++
									if !_rules[rule_]() {
										goto l23
									}
									add(ruleERROR, position26)
								}
							l27:
								{
									position28, tokenIndex28 := position, tokenIndex
									if !_rules[ruleStringLike]() {
										goto l28
									}
									goto l27
								l28:
									position, tokenIndex = position28, tokenIndex28
								}
								add(ruleError, position25)
							}
							goto l24
						l23:
							position, tokenIndex = position23, tokenIndex23
						}
					l24:
						if !_rules[ruleEND]() {
							goto l3
						}
						add(ruleResponse, position4)
					}
					goto l2
				l3:
					position, tokenIndex = position2, tokenIndex2
					{
						position29 := position
						if !_rules[rule_]() {
							goto l0
						}
						{
							position30, tokenIndex30 := position, tokenIndex
							{
								position32 := position
								{
									position33, tokenIndex33 := position, tokenIndex
									if !_rules[ruleItem]() {
										goto l34
									}
									{
										position35, tokenIndex35 := position, tokenIndex
										if !_rules[ruleCREATE]() {
											goto l36
										}
										goto l35
									l36:
										position, tokenIndex = position35, tokenIndex35
										if !_rules[ruleSET]() {
											goto l34
										}
									}
								l35:
									if !_rules[ruleIdentifier]() {
										goto l34
									}
									{
										position37, tokenIndex37 := position, tokenIndex
										if !_rules[ruleItemParams]() {
											goto l37
										}
										goto l38
									l37:
										position, tokenIndex = position37, tokenIndex37
									}
								l38:
									goto l33
								l34:
									position, tokenIndex = position33, tokenIndex33
									if !_rules[ruleItem]() {
										goto l39
									}
									if !_rules[ruleCLEAR]() {
										goto l39
									}
									if !_rules[ruleIdentifier]() {
										goto l39
									}
									{
										position40 := position
										{
											position43 := position
											{
												position44, tokenIndex44 := position, tokenIndex
												if !_rules[ruleEXTERNAL]() {
													goto l45
												}
												goto l44
											l45:
												position, tokenIndex = position44, tokenIndex44
												{
													switch buffer[position] {
													case 'e':
														if !_rules[ruleEXPANDED]() {
															goto l39
														}
													case 'm':
														if !_rules[ruleMECHANISM]() {
															goto l39
														}
													case 't':
														if !_rules[ruleTYPE]() {
															goto l39
														}
													default:
														if !_rules[ruleNAME]() {
															goto l39
														}
													}
												}

											}
										l44:
											if !_rules[rule_]() {
												goto l39
											}
											add(ruleItemKey, position43)
										}
									l41:
										{
											position42, tokenIndex42 := position, tokenIndex
											{
												position47 := position
												{
													position48, tokenIndex48 := position, tokenIndex
													if !_rules[ruleEXTERNAL]() {
														goto l49
													}
													goto l48
												l49:
													position, tokenIndex = position48, tokenIndex48
													{
														switch buffer[position] {
														case 'e':
															if !_rules[ruleEXPANDED]() {
																goto l42
															}
														case 'm':
															if !_rules[ruleMECHANISM]() {
																goto l42
															}
														case 't':
															if !_rules[ruleTYPE]() {
																goto l42
															}
														default:
															if !_rules[ruleNAME]() {
																goto l42
															}
														}
													}

												}
											l48:
												if !_rules[rule_]() {
													goto l42
												}
												add(ruleItemKey, position47)
											}
											goto l41
										l42:
											position, tokenIndex = position42, tokenIndex42
										}
										add(ruleItemKeys, position40)
									}
									goto l33
								l39:
									position, tokenIndex = position33, tokenIndex33
									if !_rules[ruleRel]() {
										goto l51
									}
									{
										position52, tokenIndex52 := position, tokenIndex
										if !_rules[ruleCREATE]() {
											goto l53
										}
										goto l52
									l53:
										position, tokenIndex = position52, tokenIndex52
										if !_rules[ruleSET]() {
											goto l51
										}
									}
								l52:
									if !_rules[ruleDualIdentifier]() {
										goto l51
									}
									{
										position54, tokenIndex54 := position, tokenIndex
										if !_rules[ruleRelParams]() {
											goto l54
										}
										goto l55
									l54:
										position, tokenIndex = position54, tokenIndex54
									}
								l55:
									goto l33
								l51:
									position, tokenIndex = position33, tokenIndex33
									if !_rules[ruleRel]() {
										goto l56
									}
									if !_rules[ruleCLEAR]() {
										goto l56
									}
									if !_rules[ruleDualIdentifier]() {
										goto l56
									}
									{
										position57 := position
										{
											position60 := position
											{
												switch buffer[position] {
												case 'e':
													if !_rules[ruleEXPANDED]() {
														goto l56
													}
												case 'a':
													if !_rules[ruleASYNC]() {
														goto l56
													}
												case 'm':
													if !_rules[ruleMECHANISM]() {
														goto l56
													}
												default:
													if !_rules[ruleVERB]() {
														goto l56
													}
												}
											}

											if !_rules[rule_]() {
												goto l56
											}
											add(ruleRelKey, position60)
										}
									l58:
										{
											position59, tokenIndex59 := position, tokenIndex
											{
												position62 := position
												{
													switch buffer[position] {
													case 'e':
														if !_rules[ruleEXPANDED]() {
															goto l59
														}
													case 'a':
														if !_rules[ruleASYNC]() {
															goto l59
														}
													case 'm':
														if !_rules[ruleMECHANISM]() {
															goto l59
														}
													default:
														if !_rules[ruleVERB]() {
															goto l59
														}
													}
												}

												if !_rules[rule_]() {
													goto l59
												}
												add(ruleRelKey, position62)
											}
											goto l58
										l59:
											position, tokenIndex = position59, tokenIndex59
										}
										add(ruleRelKeys, position57)
									}
									goto l33
								l56:
									position, tokenIndex = position33, tokenIndex33
									{
										switch buffer[position] {
										case 'f':
											if !_rules[ruleFREE]() {
												goto l31
											}
											if !_rules[ruleIdentifier]() {
												goto l31
											}
										l65:
											{
												position66, tokenIndex66 := position, tokenIndex
												if !_rules[ruleIdentifier]() {
													goto l66
												}
												goto l65
											l66:
												position, tokenIndex = position66, tokenIndex66
											}
										case 'n':
											if !_rules[ruleNEST]() {
												goto l31
											}
											if !_rules[ruleIdentifier]() {
												goto l31
											}
										l67:
											{
												position68, tokenIndex68 := position, tokenIndex
												if !_rules[ruleIdentifier]() {
													goto l68
												}
												goto l67
											l68:
												position, tokenIndex = position68, tokenIndex68
											}
											if !_rules[ruleIN]() {
												goto l31
											}
											if !_rules[ruleIdentifier]() {
												goto l31
											}
										case 'r':
											if !_rules[ruleRel]() {
												goto l31
											}
											if !_rules[ruleDELETE]() {
												goto l31
											}
											if !_rules[ruleDualIdentifier]() {
												goto l31
											}
										default:
											if !_rules[ruleItem]() {
												goto l31
											}
											if !_rules[ruleDELETE]() {
												goto l31
											}
											if !_rules[ruleIdentifier]() {
												goto l31
											}
										}
									}

								}
							l33:
								add(ruleMutation, position32)
							}
							goto l30
						l31:
							position, tokenIndex = position30, tokenIndex30
							{
								position70 := position
								{
									position71, tokenIndex71 := position, tokenIndex
									{
										position73 := position
										{
											position74, tokenIndex74 := position, tokenIndex
											if !_rules[ruleItem]() {
												goto l75
											}
											if !_rules[ruleFETCH]() {
												goto l75
											}
											if !_rules[ruleIdentifier]() {
												goto l75
											}
											goto l74
										l75:
											position, tokenIndex = position74, tokenIndex74
											{
												position77 := position
												if !_rules[ruleItem]() {
													goto l76
												}
												if !_rules[ruleLIST]() {
													goto l76
												}
												{
													position78, tokenIndex78 := position, tokenIndex
													if !_rules[ruleNumber]() {
														goto l78
													}
													goto l79
												l78:
													position, tokenIndex = position78, tokenIndex78
												}
											l79:
												add(ruleItemsList, position77)
											}
											goto l74
										l76:
											position, tokenIndex = position74, tokenIndex74
											if !_rules[ruleRel]() {
												goto l80
											}
											if !_rules[ruleFETCH]() {
												goto l80
											}
											if !_rules[ruleDualIdentifier]() {
												goto l80
											}
											goto l74
										l80:
											position, tokenIndex = position74, tokenIndex74
											if !_rules[ruleRel]() {
												goto l81
											}
											if !_rules[ruleIdentifier]() {
												goto l81
											}
											{
												position82, tokenIndex82 := position, tokenIndex
												if !_rules[ruleIdentifier]() {
													goto l82
												}
												goto l81
											l82:
												position, tokenIndex = position82, tokenIndex82
											}
											goto l74
										l81:
											position, tokenIndex = position74, tokenIndex74
											if !_rules[ruleIN_QUERY]() {
												goto l83
											}
											if !_rules[ruleIdentifier]() {
												goto l83
											}
											goto l74
										l83:
											position, tokenIndex = position74, tokenIndex74
											{
												switch buffer[position] {
												case 'w':
													if !_rules[ruleWORLD]() {
														goto l72
													}
												case 'i':
													if !_rules[ruleItem]() {
														goto l72
													}
													if !_rules[ruleIN]() {
														goto l72
													}
													if !_rules[ruleIdentifier]() {
														goto l72
													}
												default:
													{
														position85 := position
														if !_rules[ruleRel]() {
															goto l72
														}
														if !_rules[ruleLIST]() {
															goto l72
														}
														{
															position86, tokenIndex86 := position, tokenIndex
															if !_rules[ruleNumber]() {
																goto l86
															}
															goto l87
														l86:
															position, tokenIndex = position86, tokenIndex86
														}
													l87:
														add(ruleRelsList, position85)
													}
												}
											}
